<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.MainActivity">


    <ImageView
        android:id="@+id/loginBackground"
        android:layout_width="248dp"
        android:layout_height="437dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="164dp"
        android:layout_marginBottom="8dp"
        android:scaleType="fitXY"
        android:src="@drawable/background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <View
        android:id="@+id/view"
        android:layout_width="292dp"
        android:layout_height="276dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:background="#F8F7F7"
        android:elevation="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/loginBackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.613"
        app:layout_constraintStart_toStartOf="@+id/loginBackground"
        app:layout_constraintTop_toTopOf="@+id/loginBackground"
        app:layout_constraintVertical_bias="0.527" />

    <EditText
        android:id="@+id/pswdEdittext"
        android:layout_width="239dp"
        android:layout_height="50dp"
        android:layout_marginBottom="112dp"
        android:elevation="16dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="@+id/emailEdittext"
        app:layout_constraintStart_toStartOf="@+id/emailEdittext" />

    <EditText
        android:id="@+id/emailEdittext"
        android:layout_width="239dp"
        android:layout_height="62dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:autofillHints=""
        android:elevation="16dp"
        android:ems="10"
        android:hint="@string/email_id"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/pswdEdittext"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toTopOf="@+id/view" />

    <Button
        android:id="@+id/loginBtn"
        android:layout_width="143dp"
        android:layout_height="55dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:elevation="16dp"
        android:onClick="loginBtn"
        android:text="@string/loginBtn"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/loginBackground"
        app:layout_constraintEnd_toEndOf="@+id/pswdEdittext"
        app:layout_constraintHorizontal_bias="0.604"
        app:layout_constraintStart_toStartOf="@+id/pswdEdittext"
        app:layout_constraintTop_toBottomOf="@+id/pswdEdittext"
        app:layout_constraintVertical_bias="0.786" />

    <TextView
        android:id="@+id/logintxt"
        android:layout_width="88dp"
        android:layout_height="42dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/loginTxt"
        android:textColor="#FFFFFF"
        android:textColorLink="#F7F2F2"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.361"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/loginBackground" />

    <TextView
        android:id="@+id/bookwormHead"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/Heading"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.451"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.065" />

    <TextView
        android:id="@+id/signupTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:onClick="signUpBtn"
        android:text="@string/signupTxt"
        android:textColor="#2167F3"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/logintxt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.714"
        app:layout_constraintStart_toEndOf="@+id/logintxt"
        app:layout_constraintTop_toTopOf="@+id/logintxt"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/newAccount"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.252"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginBackground"
        app:layout_constraintVertical_bias="0.758" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:onClick="signUpBtn"
        android:text="@string/signupTxt"
        android:textColor="#2167F3"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/textView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.123"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toTopOf="@+id/textView4"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="23dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:elevation="16dp"
        android:onClick="forgotPswdBtn"
        android:text="@string/forgotpswd"
        android:textColor="#2167F3"
        android:textSize="17sp"
        app:layout_constraintBottom_toTopOf="@+id/loginBtn"
        app:layout_constraintEnd_toEndOf="@+id/pswdEdittext"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/pswdEdittext"
        app:layout_constraintTop_toBottomOf="@+id/pswdEdittext"
        app:layout_constraintVertical_bias="0.426" />

</android.support.constraint.ConstraintLayout>