<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.SignUp">

    <ImageView
        android:id="@+id/SignUpBackground"
        android:layout_width="216dp"
        android:layout_height="460dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.498"
        app:srcCompat="@drawable/background" />

    <View
        android:id="@+id/view"
        android:layout_width="308dp"
        android:layout_height="310dp"
        android:layout_marginStart="36dp"
        android:layout_marginEnd="8dp"
        android:background="#F8F7F7"
        app:layout_constraintBottom_toBottomOf="@+id/SignUpBackground"
        app:layout_constraintEnd_toEndOf="@+id/SignUpBackground"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/SignUpBackground"
        android:elevation="16dp"/>

    <TextView
        android:id="@+id/bookwormHead"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/Heading"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.451"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.065" />

    <EditText
        android:id="@+id/signUpEmail"
        android:layout_width="242dp"
        android:layout_height="56dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="Email id"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintHorizontal_bias="0.482"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toTopOf="@+id/view"
        android:elevation="16dp"/>

    <EditText
        android:id="@+id/signUpPswd"
        android:layout_width="242dp"
        android:layout_height="51dp"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="Password"
        app:layout_constraintEnd_toEndOf="@+id/signUpEmail"
        app:layout_constraintStart_toStartOf="@+id/signUpEmail"
        app:layout_constraintTop_toBottomOf="@+id/signUpEmail"
        android:elevation="16dp"/>

    <EditText
        android:id="@+id/confirmPswd"
        android:layout_width="240dp"
        android:layout_height="51dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="Confirm Password"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="@+id/signUpPswd"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/signUpPswd"
        app:layout_constraintTop_toBottomOf="@+id/signUpPswd"
        app:layout_constraintVertical_bias="0.289"
        android:elevation="16dp"/>

    <Button
        android:id="@+id/signupbtn"
        android:layout_width="143dp"
        android:layout_height="55dp"
        android:layout_marginTop="52dp"
        android:onClick="signUpBtn"
        android:text="@string/signupBtn"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/confirmPswd"
        app:layout_constraintHorizontal_bias="0.432"
        app:layout_constraintStart_toStartOf="@+id/confirmPswd"
        app:layout_constraintTop_toBottomOf="@+id/confirmPswd" />

    <TextView
        android:id="@+id/signUP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/signupTxt"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.728"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/SignUpBackground" />

    <TextView
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/loginTxt"
        android:textColor="#2167F3"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/signUP"
        app:layout_constraintEnd_toStartOf="@+id/signUP"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/signUP"
        android:onClick="loginBtn"/>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="92dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/alreadyHaveaAccount"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.248"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SignUpBackground"
        app:layout_constraintVertical_bias="0.0"
        android:textStyle="bold"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:onClick="loginBtn"
        android:text="@string/loginTxt"
        android:textColor="#2167F3"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.344"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toTopOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.0" />



</android.support.constraint.ConstraintLayout>