<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.CreateProfile">

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="414dp"
        android:layout_height="286dp"
        android:layout_marginBottom="8dp"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/background" />

    <View
        android:id="@+id/view2"
        android:layout_width="412dp"
        android:layout_height="445dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageView5" />

    <ImageView
        android:id="@+id/profileImage"
        android:layout_width="183dp"
        android:layout_height="177dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:elevation="16dp"
        android:onClick="profilebtn"
        app:layout_constraintBottom_toTopOf="@+id/view2"
        app:layout_constraintEnd_toEndOf="@+id/imageView5"
        app:layout_constraintStart_toStartOf="@+id/imageView5"
        app:layout_constraintTop_toTopOf="@+id/imageView5" />

    <TextView
        android:id="@+id/address"
        android:layout_width="110dp"
        android:layout_height="50dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="308dp"
        android:background="@drawable/background"
        android:text="@string/address"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view2" />

    <TextView
        android:id="@+id/city"
        android:layout_width="110dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/background"
        android:text="@string/City"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/address"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="@+id/address"
        app:layout_constraintTop_toBottomOf="@+id/address" />

    <TextView
        android:id="@+id/province"
        android:layout_width="110dp"
        android:layout_height="50dp"
        android:layout_marginTop="52dp"
        android:background="@drawable/background"
        android:text="@string/Province"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/city"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="@+id/city"
        app:layout_constraintTop_toBottomOf="@+id/city" />

    <TextView
        android:id="@+id/postalcode"
        android:layout_width="106dp"
        android:layout_height="49dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/background"
        android:text="@string/postalCode"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/province"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/province"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/addresstxt"
        android:layout_width="304dp"
        android:layout_height="53dp"
        android:ems="10"
        android:hint="@string/address"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="@+id/address"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toRightOf="@id/address"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/address" />

    <EditText
        android:id="@+id/citytxt"
        android:layout_width="297dp"
        android:layout_height="54dp"
        android:layout_marginStart="8dp"
        android:ems="10"
        android:hint="@string/City"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="@+id/city"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/city"
        app:layout_constraintTop_toTopOf="@+id/city" />

    <EditText
        android:id="@+id/provincetxt"
        android:layout_width="294dp"
        android:layout_height="55dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:hint="@string/Province"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="@+id/province"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/province"
        app:layout_constraintTop_toTopOf="@+id/province" />

    <EditText
        android:id="@+id/postalcodetxt"
        android:layout_width="292dp"
        android:layout_height="51dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:hint="@string/postalCode"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="@+id/postalcode"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/postalcode"
        app:layout_constraintTop_toTopOf="@+id/postalcode" />

    <Button
        android:id="@+id/next"
        android:layout_width="108dp"
        android:layout_height="53dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:onClick="btnNext"
        android:text="@string/next"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/view2"
        app:layout_constraintEnd_toStartOf="@+id/view2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/view2"
        app:layout_constraintTop_toBottomOf="@+id/postalcodetxt" />

    <ImageView
        android:id="@+id/profileEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="32dp"
        android:onClick="editbtn"
        app:layout_constraintBottom_toTopOf="@+id/view2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.977"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profileImage"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@android:drawable/ic_menu_edit" />


</android.support.constraint.ConstraintLayout>